# TAISS-Project

./: .gitignore  LICENSE  README.md
ProjectBFSub/: actions.js  contract.js  hashage.js  index.js  models.js  package-lock.json  package.json  routes.js  run.sh  substreams.yaml
ProjectBFSub/BFTrace/: BFTrace.abi  BFTrace.cpp  BFTrace.wasm
ProjectBFSub/FlexSimPareto/: SimulateSensorData.js  callPareto.js  csvparse.js
ProjectBFSub/FlexSimPareto/Scenarios/: firstscenario.csv  firstscenario1.csv  firstscenario2.csv  firstscenario3.csv  scenario.js  secondscenario100.csv  secondscenario1000.csv  secondscenario2000.csv  secondscenario500.csv
ProjectBFSub/substreams/: Cargo.toml  link.js  substreams.js  substreams.yaml  taiss-v0.1.0.spkg
ProjectBFSub/substreams/src/: abi.rs  lib.rs  sink.rs
ProjectMaxMax/: contract.js  index.js  package-lock.json  package.json  routes.js
ProjectMaxMax/FlexSimPareto/: SimulateSensorData.js  callPareto.js  csvparse.js
ProjectMaxMax/FlexSimPareto/Scenarios/: firstscenario2.csv  scenario.js  secondscenario.csv  secondscenario2.csv  secondscenario3.csv
ProjectMaxMax/taissmax/: IOTDATA.cpp  taissmax.abi  taissmax.wasm
ProjectMinMin/: actions.js  contract.js  index.js  models.js  package-lock.json  package.json  routes.js
ProjectMinMin/FlexSimPareto/: callPareto.js  csvparse.js
ProjectMinMin/FlexSimPareto/Scenarios/: firstscenario.csv  scenario1.csv  secondscenario.csv
ProjectMinMin/TraceMin/: TraceMin.abi  TraceMin.cpp  TraceMin.wasm
