[package]
name = "taiss"
version = "0.1.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
antelope = "0.1.4"
substreams = "0.5"
substreams-antelope = "0.1"
substreams-sink-prometheus = "0.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"